# ForgedThoughts

./: .gitignore  Cargo.toml  Readme.md  bigger_picture.md  image.ft  main.ft
.github/workflows/: ci.yml  deploy-docs.yml
_examples/: merging.ft  wine_glass.ft
cli/: Cargo.toml
cli/src/: main.rs
crates/forgedthoughts/: Cargo.toml
crates/forgedthoughts/src/: ast.rs  eval.rs  jit.rs  lexer.rs  lib.rs  parser.rs  render_api.rs  renderer.rs  vm.rs
crates/forgedthoughts/src/materials/: dielectric.rs  lambert.rs  metal.rs  mod.rs  standard.rs
crates/forgedthoughts/src/renderer/: path.rs  ray.rs
crates/forgedthoughts/tests/: golden.rs  render_regression.rs
crates/forgedthoughts/tests/fixtures/eval_err/: immutable_assignment.err  immutable_assignment.ft  invalid_clamp_arity.err  invalid_clamp_arity.ft  invalid_dot_args.err  invalid_dot_args.ft  invalid_mix_args.err  invalid_mix_args.ft  invalid_mul_args.err  invalid_mul_args.ft  invalid_normalize_args.err  invalid_normalize_args.ft  invalid_vec3_args.err  invalid_vec3_args.ft  undefined_identifier.err  undefined_identifier.ft
crates/forgedthoughts/tests/fixtures/eval_ok/: arithmetic.ft  arithmetic.state  builtins.ft  builtins.state  hex_colors.ft  hex_colors.state  mvp.ft  mvp.state  vector_arithmetic.ft  vector_arithmetic.state  vector_builtins.ft  vector_builtins.state
crates/forgedthoughts/tests/fixtures/parse_err/: invalid_hex_color.err  invalid_hex_color.ft  missing_semicolon.err  missing_semicolon.ft
crates/forgedthoughts/tests/fixtures/parse_ok/: arithmetic.ast  arithmetic.ft  basic.ast  basic.ft
crates/forgedthoughts/tests/fixtures/render_regression/: preview_lambert.ft  preview_material_hook.ft  ray_boolean_union_round.ft  ray_metal.ft
crates/ftc/: Cargo.toml
crates/ftc/src/: main.rs
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json  site-metadata.json
docs/.docusaurus/docusaurus-plugin-content-docs/default/: __mdx-loader-dependency.json  site-docs-booleans-md-236.json  site-docs-cli-md-1a2.json  site-docs-index-md-c37.json  site-docs-install-md-c4d.json  site-docs-language-md-9cf.json  (+6 more)
docs/docs/: booleans.md  cli.md  custom-modeling.md  index.md  install.md  language.md  lights.md  limitations.md  materials.md  math.md  objects.md  renderer.md  settings.md  skeletons.md
docs/src/css/: custom.css
docs/src/pages/: index.tsx
docs/src/theme/: prism-include-languages.ts
examples/: boolean_base.ft  boolean_diff_chamfer.ft  boolean_diff_columns.ft  boolean_diff_round.ft  boolean_diff_stairs.ft  boolean_difference.ft  boolean_engrave.ft  boolean_groove.ft  boolean_intersect_chamfer.ft  boolean_intersect_columns.ft  boolean_intersect_round.ft  boolean_intersect_stairs.ft  boolean_intersection.ft  boolean_pipe.ft  boolean_tongue.ft  boolean_union.ft  boolean_union_chamfer.ft  boolean_union_columns.ft  boolean_union_round.ft  boolean_union_soft.ft  boolean_union_stairs.ft  booleans.ft  camera_lights.ft  checker_material.ft  extrude_polygon.ft  ft_bsdf.ft  ft_bump.ft  ft_material.ft  ft_material_glass.ft  ft_material_wax.ft  ft_sdf.ft  glass.ft  helmet.ft  imports.ft  lambert.ft  line.ft  metal.ft  modifier.ft  mvp.ft  noise.ft  (+13 more)
examples/cut_sphere/: main.ft
examples/helmet/: main.ft
examples/logo/: main.ft
forgedthoughts/: Cargo.toml  Readme.md
forgedthoughts/src/: _camera.rs  _shapes.rs  buffer.rs  ft.rs  lib.rs  marching_cubes.rs  material.rs  modelbuffer.rs  ray.rs  renderbuffer.rs  scanner.rs  script.rs  texture.rs  utils.rs
forgedthoughts/src/_ft/: camera.rs  lights.rs
forgedthoughts/src/_renderer/: bsdf.rs  pbr.rs
forgedthoughts/src/camera/: mod.rs  pinhole.rs
forgedthoughts/src/ft/: analytical.rs  camera.rs  fx.rs  lights.rs  material.rs  math.rs  modifier.rs  operators.rs  procedural.rs  ray_modifier.rs  renderer.rs  scene.rs  sdf.rs  sdf3d.rs  settings.rs  smooth.rs  structs.rs
forgedthoughts/src/lights/: mod.rs  point.rs
forgedthoughts/src/node/: graph.rs  material.rs  materialnode.rs  mod.rs  pinholenode.rs  pointlightnode.rs  terminal.rs
forgedthoughts/src/node/nodes/: mod.rs  mul.rs  output.rs  point3d.rs  value2d.rs  value3d.rs
forgedthoughts/src/node/shapes/: boxnode.rs  line.rs  mod.rs  sphere.rs
forgedthoughts/src/renderer/: bsdf.rs  mod.rs  pbr.rs  phong.rs
ft_ide/: Cargo.toml
ft_ide/src/: main.rs
ft_ide_lib/: Cargo.toml
ft_ide_lib/src/: editor.rs  lib.rs
ft_ide_lib/src/ui/: context.rs  draw2d.rs  mod.rs  rect.rs
ftc/: Cargo.toml  Readme.md
ftc/src/: main.rs
ide/: Cargo.toml
ide/Xcode/Forged Thoughts Shared/: Bridge.h  Renderer.swift
ide/Xcode/Forged Thoughts macOS/: GameViewController.swift
ide/Xcode/Forged Thoughts.xcodeproj/: project.pbxproj
ide/src/: main.rs
ide_lib/: Cargo.toml  rust.h
ide_lib/src/: editor.rs  lib.rs  task.rs
ide_lib/src/ui/: context.rs  draw2d.rs  rect.rs
ide_lib/src/ui/widgets/: code_toolbar.rs  mod.rs  text_button.rs
nodes/core/: mulscalar.ftn  point3d.ftn  test.ftn
nodes/core/shapes3d/: sphere.ftn
nodes/noise2d/: ValueNoise2D.ftn
(+8 files in other folders)
