[package]
name = "forgedthoughts"
version = "0.1.2"
edition = "2021"
description = "A 3D modeling and rendering programming language utilizing SDFs."
license = "MIT"
keywords = ["modeling", "rendering", "programming", "language", "3d"]
repository = "https://github.com/markusmoenig/ForgedThoughts.git"

[dependencies]
rhai = { version = "1.12.0", default-features = true, features = ["sync", "internals"] }
rayon = "1.5.3"
colors-transform = "0.2.11"
rust-pathtracer = { version = "0.2.0", path = "../../rust-pathtracer/rust-pathtracer" }

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]