[package]
name = "forgedthoughts"
version = "0.1.5"
edition = "2021"
description = "A 3D modeling and rendering programming language utilizing SDFs."
license = "MIT"
keywords = ["modeling", "rendering", "programming", "language", "3d"]
repository = "https://github.com/markusmoenig/ForgedThoughts.git"

[dependencies]
vek = { version = "0.17.1", default-features = true }
rayon = "1.10"
rust-embed = { version = "8.5", default-features = true, features = [
    "include-exclude",
] }
rustc-hash = "2.1.1"
rpu = { version = "0.3.0", path = "../../rpu/rpu" }
wasmer = "6.0.1"
image = "0.25.1"
num_cpus = "1.16.0"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
default = []
double = []
