[package]
name = "ftc"
version = "0.1.0"
edition = "2021"
description = "A modeling and rendering programming language utilizing SDFs."
license = "MIT"
keywords = ["modeling", "rendering", "programming", "language", "3d"]
repository = "https://github.com/markusmoenig/ForgedThoughts.git"

[dependencies]

forgedthoughts = { version = "0.1.1", path = "../forgedthoughts" }
png = "0.17.5"
clap = "4.1.5"
