[package]
name = "ftc"
version = "0.1.5"
edition = "2021"
description = "A modeling and rendering programming language utilizing SDFs."
license = "MIT"
keywords = ["modeling", "rendering", "programming", "language", "3d"]
repository = "https://github.com/markusmoenig/ForgedThoughts.git"

[dependencies]
forgedthoughts = { version = "0.1.5", path = "../forgedthoughts" }
png = "0.17.5"
clap = "4.1.5"
rpu = { version = "0.3.0", path = "../../rpu/rpu" }
