[package]
name = "ftc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
forgedthoughts = { path = "../forgedthoughts" }
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
